# pivlab-fm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
fm_client/: Dockerfile  nginx.conf
fm_client/src/: index.html
fm_client/src/css/: style.css
fm_client/src/js/: api.js  app.js  player.js  ui.js
fm_server/: __init__.py  config.py  database.py  main.py  models.py  scanner.py
