[tool.poetry]
name = "fm_server"
version = "0.1.0"
description = "pivlab-fm project"
authors = ["Arsenii Nikulin <studentq.work@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.0"
mutagen = "^1.47.0"
aiofiles = "^24.1.0"
python-multipart = "^0.0.20"
pre-commit = ">=4.5.1,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
